crates/rstest-bdd-macros/tests/fixtures/scenarios_missing_dir.rs
use rstest_bdd_macros::scenarios;

scenarios!("tests/features/does_not_exist");

fn main() {}
